# pyrunjs

./: .gitignore  .pdm-python  README.md  noxfile.py  pyproject.toml
.github/workflows/: blank.yml  pypi_publish.yml  unit-test.yml
src/pyrunjs/: runner.py
tests/: test_js_promise.py  test_runner_methods.py  导入功能测试.py
